@@ -1,6 +1,6 @@
 /*
  *
- *  Copyright 2017-2018 the original author or authors.
+ *  Copyright 2017-2019 the original author or authors.
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -19,11 +19,8 @@
 package springfox.documentation.spring.data.rest;
 
 import com.fasterxml.classmate.TypeResolver;
-import com.google.common.base.Function;
-import com.google.common.collect.FluentIterable;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.mapping.context.PersistentEntities;
-import org.springframework.data.repository.core.RepositoryInformation;
 import org.springframework.data.repository.support.Repositories;
 import org.springframework.data.rest.core.config.RepositoryRestConfiguration;
 import org.springframework.data.rest.core.mapping.ResourceMappings;
@@ -35,9 +32,11 @@ import springfox.documentation.spi.service.RequestHandlerProvider;
 
 import javax.annotation.PostConstruct;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
+import java.util.function.Function;
 
-import static com.google.common.collect.Lists.*;
+import static java.util.stream.Collectors.*;
 
 @Component
 class EntityServicesProvider implements RequestHandlerProvider {
@@ -76,41 +75,39 @@ class EntityServicesProvider implements RequestHandlerProvider {
 
   @Override
   public List<RequestHandler> requestHandlers() {
-    List<EntityContext> contexts = newArrayList();
+    List<EntityContext> contexts = new ArrayList<>();
     for (Class each : repositories) {
-      RepositoryInformation repositoryInfo = repositories.getRepositoryInformationFor(each);
-      Object repositoryInstance = repositories.getRepositoryFor(each);
-      ResourceMetadata resource = mappings.getMetadataFor(each);
-      if (resource.isExported()) {
-        contexts.add(new EntityContext(
-            typeResolver,
-            configuration,
-            repositoryInfo,
-            repositoryInstance,
-            resource,
-            mappings,
-            entities,
-            associations, extractorConfiguration));
-      }
+      repositories.getRepositoryInformationFor(each).ifPresent(repositoryInfo -> {
+        repositories.getRepositoryFor(each).ifPresent(repositoryInstance -> {
+          ResourceMetadata resource = mappings.getMetadataFor(each);
+          if (resource.isExported()) {
+            contexts.add(new EntityContext(
+                typeResolver,
+                configuration,
+                repositoryInfo,
+                repositoryInstance,
+                resource,
+                mappings,
+                entities,
+                associations, extractorConfiguration));
+          }
+        });
+      });
 
     }
 
-    List<RequestHandler> handlers = new ArrayList<RequestHandler>();
+    List<RequestHandler> handlers = new ArrayList<>();
     for (EntityContext each : contexts) {
-      handlers.addAll(FluentIterable.from(extractorConfiguration.getEntityExtractors())
-          .transformAndConcat(extractFromContext(each))
-          .toList());
+      handlers.addAll(extractorConfiguration.getEntityExtractors().stream()
+          .map(extractFromContext(each))
+          .flatMap(Collection::stream)
+          .collect(toList()));
     }
     return handlers;
   }
 
   private Function<EntityOperationsExtractor, List<RequestHandler>> extractFromContext(final EntityContext context) {
-    return new Function<EntityOperationsExtractor, List<RequestHandler>>() {
-      @Override
-      public List<RequestHandler> apply(EntityOperationsExtractor input) {
-        return input.extract(context);
-      }
-    };
+    return input -> input.extract(context);
   }
 
 }
